Bug 488673 - [master] Brush preset thumbnail is blank by default in the save/overwrite preset dialog
Summary: [master] Brush preset thumbnail is blank by default in the save/overwrite pre...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-18 15:48 UTC by tomtomtomreportingin
Modified: 2024-10-24 12:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2024-06-18 15:48:04 UTC
git 497f151a03

SUMMARY
When the user wishes to save or overwrite a brush preset, the preset thumbnail shown in the dialog is blank by default, instead of inheriting the old thumbnail.

STEPS TO REPRODUCE
1. Open the brush settings.
2. Change any brush property.
3. Select "Overwrite Brush Preset"

OBSERVED RESULT
The thumbnail is blank.

EXPECTED RESULT
The thumbnail should be inherited.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian Sid
KDE Plasma Version: 5.27.11
KDE Frameworks Version: 5.115.0
Qt Version: 5.15.17 (appimage)
Comment 1 Dmitry Kazakov 2024-10-24 12:35:49 UTC
Git commit 429bb8493b4c11ae28888b79f21dff3c56e7ef0b by Dmitry Kazakov.
Committed on 24/10/2024 at 12:35.
Pushed by dkazakov into branch 'master'.

Fix the current preset thumbnail to be present in the preset save dialog

We shouldn't update the thumb separately, just load it every time when the dialog
is open (in the end, it doesn't happen too often).
Related: bug 446792

M  +0    -3    libs/ui/kis_paintop_box.cc
M  +7    -6    libs/ui/widgets/kis_paintop_presets_editor.cpp
M  +0    -4    libs/ui/widgets/kis_paintop_presets_editor.h

https://invent.kde.org/graphics/krita/-/commit/429bb8493b4c11ae28888b79f21dff3c56e7ef0b
Comment 2 Dmitry Kazakov 2024-10-24 12:36:26 UTC
Git commit c1e51b4020d95433851144da92172b790466edc7 by Dmitry Kazakov.
Committed on 24/10/2024 at 12:36.
Pushed by dkazakov into branch 'krita/5.2'.

Fix the current preset thumbnail to be present in the preset save dialog

We shouldn't update the thumb separately, just load it every time when the dialog
is open (in the end, it doesn't happen too often).
Related: bug 446792

M  +0    -2    libs/ui/kis_paintop_box.cc
M  +7    -6    libs/ui/widgets/kis_paintop_presets_editor.cpp
M  +0    -4    libs/ui/widgets/kis_paintop_presets_editor.h

https://invent.kde.org/graphics/krita/-/commit/c1e51b4020d95433851144da92172b790466edc7