Fix the current preset thumbnail to be present in the preset save dialog

We shouldn't update the thumb separately, just load it every time when the dialog
is open (in the end, it doesn't happen too often).

BUG:488673
BUG:446792