libs/ui/kis_paintop_box.cc
@@ -592,7 +592,6 @@ void KisPaintopBox::restoreResource(KoResourceSP resource)
     if (preset) {
         setCurrentPaintop(preset);
 
-        m_presetsEditor->setPresetImage(preset->image());
         m_presetsEditor->resourceSelected(resource);
     }
 }
@@ -632,7 +631,6 @@ void KisPaintopBox::resourceSelected(KoResourceSP resource)
         dbgResources << "resourceSelected: preset" << preset << (preset ? QString("%1").arg(preset->valid()) : "");
         setCurrentPaintop(preset);
 
-        m_presetsEditor->setPresetImage(preset->image());
         m_presetsEditor->resourceSelected(resource);
     }
 }
