libs/ui/widgets/kis_paintop_presets_editor.h
@@ -54,10 +54,6 @@ public:
     /// returns the internal ID for the paint op (brush engine)
     QString currentPaintOpId();
 
-    ///fill the cutoutOverlay rect with the content of an image, used to get the image back when selecting a preset
-    ///@param image image that will be used, should be image of an existing preset resource
-    void setPresetImage(const QImage& image);
-
     void resizeEvent(QResizeEvent* ) override;
 
     void updateViewSettings();
